tests/incomplete-ty-var/out.txt
error: incomplete type variable
  ┌─ err.sml:1:10
  │
1 │ datatype ' guh = no
  │          ^

lexing failed
